--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,11 +2,6 @@
 	font-family: 'Asap';
 }
 
-hr {
-	border-width: 2px;
-	border-color: #3d5a80;
-}
-
 /* Split the screen in half */
 .split {
 	height: 100%;
@@ -14,8 +9,6 @@ hr {
 	position: fixed;
 	z-index: 1;
 	top: 0;
-	overflow-x: hidden;
-	overflow-y: scroll;
 	padding-top: 20px;
 }
 
@@ -23,12 +16,6 @@ hr {
 .left {
 	left: 0;
 	background-color: #0f1f35;
-}
-
-h1,
-p {
-	margin-top: 5%;
-	margin-bottom: 5%;
 	color: oldlace;
 }
 
@@ -36,6 +23,9 @@ p {
 .right {
 	right: 0;
 	background-color: oldlace;
+	overflow-x: visible;
+	overflow-y: scroll;
+	color: #3d5a80;
 }
 
 /* If you want the content centered horizontally and vertically */
@@ -49,10 +39,14 @@ p {
 
 .right-centered {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 	text-align: left;
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
+.right-centered hr {
+	border-width: 2px;
+	border-color: #3d5a80;
 }
 
 .profiles a {
@@ -63,8 +57,4 @@ p {
 #headshot {
 	width: 70%;
 	border-radius: 50%;
-}
-
-#about-me {
-	color: #3d5a80;
 }
